<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            bootstrap:bootstrapBrand="success"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/connectd" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/sign_in_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:padding="10dp"
            android:textColorHint="#cccccc"
            bootstrap:roundedCorners="true"
            bootstrap:bootstrapSize="lg"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/sign_in_et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:hint="Password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColorHint="#cccccc"
            bootstrap:roundedCorners="true"
            bootstrap:bootstrapSize="lg"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnSignInSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:text="@string/sign_in"
            bootstrap:roundedCorners="true"
            bootstrap:bootstrapBrand="success"
            bootstrap:bootstrapSize="lg"/>
    </LinearLayout>

</RelativeLayout>
