<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/detail_header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/user_detail_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="6dp"
            android:padding="1px"
            android:src="@drawable/icon_user_default"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/detail_table"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/user_detail_photo"
            android:layout_toRightOf="@id/user_detail_photo"
            android:gravity="center"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_detail_photo"
            android:layout_margin="5dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:padding="3dp">

                <TextView
                    android:id="@+id/user_basic_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/basic_info" />

                <com.beardedhen.androidbootstrap.AwesomeTextView
                    android:id="@+id/edit_basic_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:visibility="gone"
                    bootstrap:fontAwesomeIcon="fa_edit" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/username" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/user_detail_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/email" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/user_detail_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="end"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/first_name" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/user_detail_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:enabled="false"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLength="20" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="start"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/last_name" />

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/user_detail_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="false"
                    android:gravity="end"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:inputType="text"
                    android:maxLength="20" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detail_user_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_header_section">


        <TableLayout
            android:id="@+id/contact_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TableRow android:background="#cccccc">

                <TextView
                    android:id="@+id/social_media_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/social_media" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_user_section">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow android:layout_marginTop="5dp">

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/get_connectd_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/invite_user"
                    bootstrap:roundedCorners="true"
                    bootstrap:bootstrapBrand="success"
                    android:visibility="gone"/>
            </TableRow>

            <TableRow>

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/detail_reset_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/reset_pwd"
                    bootstrap:roundedCorners="true"
                    bootstrap:bootstrapBrand="warning"
                    android:visibility="gone" />
            </TableRow>


        </TableLayout>

    </RelativeLayout>

</RelativeLayout>